# HatchitEditor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.bat
Linux/: CMakeLists.txt  configure.sh
Windows/: CMakeLists.txt  HatchitEditor.ini  HatchitEditor.qrc  config.bat
cmake/python/: CMakeLists.txt
icons/: collapsed.pdn  expanded.pdn
include/: ht_editor_about.h  ht_editor_collapsepane.h  ht_editor_command.h  ht_editor_console.h  ht_editor_filemenu.h  ht_editor_global.h.h  ht_editor_globals.h  ht_editor_helpmenu.h  ht_editor_launcher.h  ht_editor_menubar.h  ht_editor_projectview.h  ht_editor_projectviewcontainer.h  ht_editor_projectviewmodel.h  ht_editor_properties.h  ht_editor_rdjsontree.h  ht_editor_rdtextview.h  ht_editor_rdtreeview.h  ht_editor_renderthread.h  ht_editor_resourcedatabase.h  ht_editor_rootlayoutdialog.h  ht_editor_rootlayoutmodel.h  ht_editor_scenetree.h  ht_editor_version.h  ht_editor_version.h.in  ht_editor_viewmenu.h  ht_editor_viewport.h  ht_editor_window.h
include/directx/: ht_editor_dxview.h
include/editor/: ht_editor_about.h  ht_editor_filemenu.h  ht_editor_launcher.h  ht_editor_menubar.h  ht_editor_preferences.h  ht_editor_projectinfo.h  ht_editor_resourcepreview.h  ht_editor_viewmenu.h  ht_editor_winview.h
include/python/: hpy_debug.h  hpy_gameobject.h  hpy_os.h  hpy_python.h
include/qjsonmodel/: qjsonitem.h  qjsonmodel.h
include/tools/HStringHasher/: ht_stringhasher.h  ht_stringhasher_dialog.h  ht_stringhasher_document.h  ht_stringhasher_documentlist.h  ht_stringhasher_filemenu.h  ht_stringhasher_filetree.h  ht_stringhasher_filetreeproxyfilter.h  ht_stringhasher_jsonitem.h  ht_stringhasher_jsonmodel.h  ht_stringhasher_menubar.h  ht_stringhasher_processedsyntaxhighlight.h  ht_stringhasher_processor.h  ht_stringhasher_sourcesyntaxhighlight.h  ht_stringhasher_syntaxhighlighter.h  ht_stringhasher_value.h  ht_stringhasher_valuetree.h
include/unused/: ht_editor_about.h  ht_editor_collapsepane.h  ht_editor_glview.h  ht_editor_imagepreview.h  ht_editor_jsontreeitem.h  ht_editor_menubar.h  ht_editor_projectview.h  ht_editor_projectviewcontainer.h  ht_editor_renderthread.h  ht_editor_resourcedatabase.h  ht_editor_resourcepreview.h  ht_editor_rootlayoutdialog.h  ht_editor_rootlayoutitemdelegate.h  ht_editor_rootlayoutmodel.h  ht_editor_rootlayouttree.h  ht_editor_version.h.in  ht_editor_window.h  ht_editor_winview.h
include/unused/qjsonmodel/: .qjsonitem.h.swp  qjsonitem.h
include/unused/windows/: ht_editor_winview.h
include/windows/: ht_editor_winview.h
source/: HatchitEditor.qrc  ht_editor_about.cpp  ht_editor_collapsepane.cpp  ht_editor_console.cpp  ht_editor_dxview.cpp  ht_editor_filemenu.cpp  ht_editor_globals.cpp  ht_editor_glview.cpp  ht_editor_helpmenu.cpp  ht_editor_imagepreview.cpp  ht_editor_jsontreeitem.cpp  ht_editor_launcher.cpp  ht_editor_menubar.cpp  ht_editor_preferences.cpp  ht_editor_projectinfo.cpp  ht_editor_projectview.cpp  ht_editor_projectviewcontainer.cpp  ht_editor_projectviewmodel.cpp  ht_editor_rdjsontree.cpp  ht_editor_rdtextview.cpp  ht_editor_rdtreeview.cpp  ht_editor_renderthread.cpp  ht_editor_resourcedatabase.cpp  ht_editor_rootlayoutdialog.cpp  ht_editor_rootlayoutitemdelegate.cpp  ht_editor_rootlayoutmodel.cpp  ht_editor_rootlayouttree.cpp  ht_editor_scenetree.cpp  ht_editor_viewmenu.cpp  ht_editor_viewport.cpp  ht_editor_window.cpp  ht_editor_winview.cpp  main.cpp
source/editor/: HatchitEditor.qrc  ht_editor_about.cpp  ht_editor_console.cpp  ht_editor_menubar.cpp  ht_editor_preferences.cpp  ht_editor_projectview.cpp  ht_editor_projectviewcontainer.cpp  ht_editor_properties.cpp  ht_editor_viewport.cpp  ht_editor_window.cpp  ht_editor_winview.cpp
source/python/: hpy_debug.cpp  hpy_gameobject.cpp  hpy_os.cpp  hpy_plugin.cpp  hpy_python.cpp
source/qjsonmodel/: qjsonitem.cpp
source/tools/HStringHasher/: ht_stringhasher_dialog.cpp  ht_stringhasher_document.cpp  ht_stringhasher_documentlist.cpp  ht_stringhasher_filemenu.cpp  ht_stringhasher_filetree.cpp  ht_stringhasher_filetreeproxyfilter.cpp  ht_stringhasher_jsonitem.cpp  ht_stringhasher_jsonmodel.cpp  ht_stringhasher_menubar.cpp  ht_stringhasher_processedsyntaxhighlight.cpp  ht_stringhasher_processor.cpp  ht_stringhasher_sourcesyntaxhighlight.cpp  ht_stringhasher_syntaxhighlighter.cpp  ht_stringhasher_value.cpp  ht_stringhasher_valuetree.cpp  main.cpp
source/unused/: ht_editor_about.cpp  ht_editor_collapsepane.cpp  ht_editor_console.cpp  ht_editor_filemenu.cpp  ht_editor_helpmenu.cpp  ht_editor_imagepreview.cpp  ht_editor_jsontreeitem.cpp  ht_editor_launcher.cpp  ht_editor_menubar.cpp  ht_editor_preferences.cpp  ht_editor_projectinfo.cpp  ht_editor_projectview.cpp  ht_editor_projectviewcontainer.cpp  ht_editor_projectviewmodel.cpp  ht_editor_rdjsontree.cpp  ht_editor_rdtextview.cpp  ht_editor_rdtreeview.cpp  ht_editor_renderthread.cpp  ht_editor_resourcedatabase.cpp  ht_editor_resourcepreview.cpp  ht_editor_rootlayoutdialog.cpp  ht_editor_rootlayoutitemdelegate.cpp  ht_editor_rootlayoutmodel.cpp  ht_editor_rootlayouttree.cpp  ht_editor_scenetree.cpp  ht_editor_viewmenu.cpp  ht_editor_viewport.cpp  ht_editor_window.cpp  ht_editor_winview.cpp
source/unused/qjsonmodel/: qjsonitem.cpp  qjsonmodel.cpp
source/windows/: ht_editor_winview.cpp
stylesheets/: HatchitEditor.qss  HatchitEditor.qss~  HatchitEditor_OLD.qss
